# audiorecorder

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: release.yml
src/: AudioRecorderWorker.cpp  AudioRecorderWorker.h  AudioRecorderWorkerConfig.h  AudioRecorderWorkerPlatform.h  AudioRecorderWorkerPlatform_linux.cpp  AudioRecorderWorkerPlatform_unsupported.cpp  AudioRecorderWorkerPlatform_windows.cpp  AudioRecorderWorkerState.h  LevelMeterWidget.cpp  LevelMeterWidget.h  MainWindow.cpp  MainWindow.h  MainWindowUi.cpp  MainWindowUi.h  WavWriter.cpp  WavWriter.h  WavWriterPcm.cpp  WavWriterPcm.h  WavWriterStream.cpp  WavWriterStream.h  main.cpp  miniaudio_impl.cpp
